optimizing controller advisor of Payment service, creating Notification document